--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -44,9 +44,9 @@
                 <h1>Reset password</h1>
                 <form>
                     <span class="form-grid">
-                        <label for="new-password">Enter new password:</label>
+                        <label for="new-password" id="new-password-label">Enter new password:</label>
                         <input id="new-password" type="password" minlength="8" maxlength="12" required>
-                        <label for="confirm-password">Re-enter new password:</label>
+                        <label for="confirm-password" id="confirm-password-label">Re-enter new password:</label>
                         <input id="confirm-password" type="password" minlength="8" maxlength="12" required>
                     </span>
                     <span id="password-note">
@@ -99,8 +99,25 @@
 <script>
     function newPasswordValidity () {
         let t = document.querySelector("#modal-forgot-password-3 form");
-        t.querySelector("input[type=submit]").disabled = !(t.checkValidity() && Array.prototype.map.call(document.querySelectorAll("#new-password, #confirm-password"), x => [/[A-Za-z0-9]+/].map(y => x.value.match(y) !== null).every(y => y)).every(x => x)
-        && document.querySelector("#new-password").value == document.querySelector("#confirm-password").value);
+
+        let newPassword = t.querySelector("#new-password");
+        let validPassword = newPassword.checkValidity() && newPassword.value.match(/[A-Za-z0-9]+/);
+        if(validPassword){
+            t.querySelector("#new-password-label").classList.add("valid");
+        }
+        else{
+            t.querySelector("#new-password-label").classList.remove("valid");
+        }
+
+        let equalPassword = newPassword.checkValidity() && newPassword.value == t.querySelector("#confirm-password").value;
+        if(equalPassword){
+            t.querySelector("#confirm-password-label").classList.add("valid");
+        }
+        else{
+            t.querySelector("#confirm-password-label").classList.remove("valid");
+        }
+
+        t.querySelector("input[type=submit]").disabled = !(validPassword && equalPassword);
     }
 
     // modal steps
