--- a/src/templates/user/add.html
+++ b/src/templates/user/add.html
@@ -28,7 +28,7 @@
 </div>
 
 <div id="add-user-form">
-    <p class="message" style="display:none; font-style: italic; color: var(--red)"></p>
+    <p class="message"></p>
     <form id="submit-form">
         <input type="submit" id="add-btn" value="Add users" name="add-btn" disabled>
     </form>
