--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -120,7 +120,7 @@
         let t = document.querySelector("#form-change-email");
         t.querySelector("input[type=submit]").disabled = !(t.checkValidity()
                                                            && Array.prototype.every.call(t.querySelectorAll("input"), x => x.value !== '')
-                                                           && [/[A-Z]+/, /[a-z]+/, /[0-9]+/].map(x => t.querySelector("input[type=password]").value.match(x) !== null).every(x => x));
+                                                           && [/[A-Za-z0-9]+/].map(x => t.querySelector("input[type=password]").value.match(x) !== null).every(x => x));
     }
 
     function changePasswordValidity () {
@@ -214,8 +214,26 @@
             } else {
                 document.querySelector("#form-change-email").reset();
                 document.querySelector('#form-change-email .form-msg').classList.add("error");
-                document.querySelector('#form-change-email .form-msg').innerText = (await d.json())['error'];
+
+                let response = await d.json()
+                let errorCode = response['error'];
+                if(errorCode == 2003){
+                    document.querySelector("#form-change-email .form-msg").innerText = "Database error. Please try again later."
+                }
+                else if(errorCode == -1){
+                    document.querySelector("#form-change-email .form-msg").innerText = response['msg'];
+                }
+                else if(errorCode == 1062){
+                    document.querySelector("#form-change-email .form-msg").innerText = response['msg'] + " is already taken.";
+                }
+                else{
+                    document.querySelector("#form-change-email .form-msg").innerText = "Internal server error. Please try again later."
+                }
             }
+        })
+        .catch(() => {
+            document.querySelector('#form-change-email .form-msg').classList.add("error");
+            document.querySelector("#form-change-email .form-msg").innerText = "Server unavailable. Please try again later."; 
         });
 
         changeEmailValidity();
