--- a/src/templates/inventory/add.html
+++ b/src/templates/inventory/add.html
@@ -152,10 +152,22 @@
         }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
             if (d.status === 500) {
-                msg = await d.text();
-                document.querySelector("#errmsg").innerHTML = `<b>ERROR:</b> ${msg}`;
-                alert(`ERROR: ${msg}`);
+                let response = await d.json();
+                let errorCode = response["error"];
+                if(errorCode == 1062){
+                    document.querySelector("#errmsg").innerHTML = `<b>ERROR:</b> ${response["msg"]}`;
+                    alert(`ERROR: ${response["msg"]}`);
+                }
+                else if(errorCode == 2003){
+                    document.querySelector("#errmsg").innerHTML = "Database error. Please try again later.";
+                }
+                else{
+                    document.querySelector("#errmsg").innerHTML = "Internal server error. Please try again later.";
+                }    
             }
+        })
+        .catch(() => {
+            document.querySelector("#errmsg").innerHTML = "Server unavailable. Please try again later.";
         });
     });
 
