--- a/src/templates/inventory/update.html
+++ b/src/templates/inventory/update.html
@@ -82,9 +82,12 @@
     </div>
 </div>
 
-<form id="submit-form">
-    <input type="submit" value="Update selected items" name="update-btn" disabled>
-</form>
+<div id="update-bottom">
+    <span id="errmsg"></span>
+    <form id="submit-form">
+        <input type="submit" value="Update selected items" name="update-btn" disabled>
+    </form>
+</div>
 
 <script>
     let currentSortSearch = [0, true];
@@ -268,8 +271,25 @@
                 "Content-Type": "application/json"
             },
             "body": JSON.stringify({ "values": values })
-        }).then(d => {
+        }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
+            if (d.status === 500){
+                let response = await d.json();
+                let errorCode = response["error"];
+                
+                if(errorCode == 2003){
+                    document.querySelector("#errmsg").innerHTML = "Database error. Please try again later.";
+                }
+                else if(errorCode == 1062){
+                    document.querySelector("#errmsg").innerHTML = response["msg"];
+                }
+                else{
+                    document.querySelector("#errmsg").innerHTML = "Internal server error. Please try again later.";
+                }
+            };
+        })
+        .catch(() => {
+            document.querySelector("#errmsg").innerHTML = "Server unavailable. Please try again later.";
         });
     })
 </script>
