--- a/src/templates/deliveries/add.html
+++ b/src/templates/deliveries/add.html
@@ -84,9 +84,12 @@
     </div>
 </div>
 
-<form id="submit-form">
-    <input type="submit" value="Log deliveries" name="update-btn" disabled>
-</form>
+<div id="deliveries-bottom">
+    <span id="errmsg"></span>
+    <form id="submit-form">
+        <input type="submit" value="Log deliveries" name="update-btn" disabled>
+    </form>
+</div>
 
 <script>
     let currentSortSearch = [0, true];
@@ -182,8 +185,21 @@
                 "Content-Type": "application/json"
             },
             "body": JSON.stringify({ "values": values })
-        }).then(d => {
+        }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_delivery.deliveries') }}";
+            if (d.status === 500) {
+                let response = await d.json();
+                let errorCode = response["error"];
+                if(errorCode == 2003){
+                    document.querySelector("#errmsg").innerHTML = "Database error. Please try again later.";
+                }
+                else{
+                    document.querySelector("#errmsg").innerHTML = "Internal server error. Please try again later.";
+                }    
+            }
+        })
+        .catch(() => {
+            document.querySelector("#errmsg").innerHTML = "Server unavailable. Please try again later.";
         });
     })
 </script>
