--- a/src/templates/inventory/remove.html
+++ b/src/templates/inventory/remove.html
@@ -56,6 +56,9 @@
             <div class="table-row table-empty hide">
                 <div>No items found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>An error occurred in the database. Please try again later.</div>
+            </div>
         </div>
     </div>
 </div>
