Add error message when loading deliveries

--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -68,6 +68,9 @@
             <div class="table-empty table-row hide">
                 <div>No deliveries found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>An error occurred in the database. Please try again later.</div>
+            </div>
         </div>
     </div>
 </div>
