--- a/src/templates/requests/approved.html
+++ b/src/templates/requests/approved.html
@@ -51,6 +51,9 @@
             <div class="table-empty table-row hide">
                 <div>No items found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>An error occurred in the database. Please try again later.</div>
+            </div>
         </div>
     </div>
 </div>
