--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -89,6 +89,9 @@
             <div class="table-empty table-row hide">
                 <div>No requests found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>An error occurred in the database. Please try again later.</div>
+            </div>
         </div>
     </div>
 </div>
