--- a/src/templates/user/remove.html
+++ b/src/templates/user/remove.html
@@ -140,7 +140,7 @@
         })
         .catch(() => {
             let p = document.querySelector('#delete-user-form p')
-            p.innerHTML = 'Server unavailable. Please try again later'
+            p.innerHTML = 'Server unavailable. Please try again later.'
             p.style.display = 'block'
 
             document.querySelector('#delete-btn').disabled = 0;
