--- a/src/templates/forms/forms.html
+++ b/src/templates/forms/forms.html
@@ -9,10 +9,9 @@
         <select autofocus>
             <option hidden disabled selected value>Select a form&hellip;</option>
             <option value="58">Appendix 58 (Stock Card)</option>
-            <option value="59">Appendix 59 (Inventory Custodian Slip)</option>
+            <option value="59,71">Appendix 59 & 71 (ICS & PAR)</option>
             <option value="63">Appendix 63 (Requisition and Issue Slip)</option>
             <option value="69">Appendix 69 (Property Card)</option>
-            <option value="71">Appendix 71 (Property Acknowledgement Receipt)</option>
         </select>
     </form>
 
@@ -66,6 +65,9 @@
             <div class="table-empty table-row hide">
                 <div>No items found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>There was an error in the database. Please try again.</div>
+            </div>
         </div>
     </div>
 </div>
@@ -112,34 +114,14 @@
             <div class="table-empty table-row hide">
                 <div>No requests found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>There was an error in the database. Please try again.</div>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    /*
-    gen58.addEventListener("click", () => {
-        let filename = `Appendix58_${itemID.value}`;
-
-        fetch("{{ url_for('bp_form.generate_58') }}" + "?item=" + itemID.value, {
-            method: "GET"
-        })
-        .then(x => x.body.getReader().read())
-        .then(x => { if (!x.value) throw `Item ID ${itemID.value} not found.`; return x; })
-        .then(x => { let link = window.URL.createObjectURL(new File([x.value], filename, { "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" })); return link; })
-        .then(x => {
-            let s = document.querySelector("#download");
-            if (s !== null) s.parentElement.removeChild(s);
-
-            let el = document.createElement("a");
-            el.id = "download"
-            el.innerText = "Download file"
-            el.href = x;
-            el.download = filename;
-            el.click();
-        });
-    })
-    */
     let currentSort = [0, true];
 
     document.querySelector("#choose-form").addEventListener("input", () => {
@@ -153,7 +135,7 @@
             document.querySelector("#search-btn").setAttribute("disabled", "");
         }
 
-        if (["58", "69"].includes(v)) {
+        if (v === '58' || v === '69') {
             document.querySelector(".inventory-table").parentElement.style.display = "";
             document.querySelector(".request-table").parentElement.style.display = "none";
             document.querySelector("#search-box").placeholder = "Search items\u2026";
@@ -210,36 +192,48 @@
             populateRequests(document.querySelector(".request-table .table-body")).then(rows => {
                 for (let row of rows) {
                     row.removeChild(row.querySelector(".actions"));
-
+                    
                     let div = document.createElement("div");
+                    div.style.gridArea = `1 / 12 / ${row.querySelectorAll(".mono").length + 1} / 13`;
+                    if (!row.querySelector(".status").classList.contains('completed')) {
+                        tr.appendChild(div);
+                        continue;
+                    }
+
                     let btn = document.createElement("button");
                     btn.role = "button";
                     btn.innerText = "Generate";
-                    btn.title = `Generate Appendix ${v}`;
+                    btn.title = v === '63' ? `Generate Appendix ${v}` : "Generate Appendices 59 and 71";
                     btn.classList.add("blue");
                     div.appendChild(btn);
                     row.appendChild(div);
 
                     btn.addEventListener("click", e => {
                         e.preventDefault();
-                        let filename = `Appendix${v}_${row.firstChild.innerText}`;
 
-                        fetch(`./${v}?item=${row.firstChild.innerText}`)
-                        .then(res => res.body.getReader().read())
-                        .then(data => {
-                            if (!data.value) throw `Item ID ${itemID.value} not found.`;
-                            
-                            let link = window.URL.createObjectURL(new File([data.value], filename, {
-                                "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                            }));
-                            return link;
-                        })
-                        .then(link => {
-                            let a = document.createElement(a);
-                            a.href = link;
-                            a.download = filename;
-                            a.click();
-                        });
+                        for (let w of v.split(",")) {
+                            let filename = `Appendix${w}_${row.firstChild.innerText}`;
+
+                            fetch(`./${w}?item=${row.firstChild.innerText}`)
+                            .then(d => {
+                                if (d.status === 200) return d;
+                            })
+                            .then(res => res.body.getReader().read())
+                            .then(data => {
+                                if (!data.value) throw `Item ID ${itemID.value} not found.`;
+                                
+                                let link = window.URL.createObjectURL(new File([data.value], filename, {
+                                    "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                                }));
+                                return link;
+                            })
+                            .then(link => {
+                                let a = document.createElement("a");
+                                a.href = link;
+                                a.download = filename;
+                                a.click();
+                            });
+                        }
                     });
                 }
             });
