--- a/src/templates/user/add.html
+++ b/src/templates/user/add.html
@@ -158,7 +158,7 @@
             }
         }).catch(() => {
             let p = document.querySelector('#add-user-form p')
-            p.innerHTML = 'Server unavailable. Please try again later'
+            p.innerHTML = 'Server unavailable. Please try again later.'
             p.style.display = 'block'
 
             document.querySelector('#submit-form input[type=submit]').value = 'Submit' 
