--- a/src/templates/inventory/update.html
+++ b/src/templates/inventory/update.html
@@ -85,8 +85,8 @@
     </div>
 </div>
 
-<div id="update-bottom">
-    <span id="errmsg"></span>
+<div class="form-bottom">
+    <span class="form-msg"></span>
     <form id="submit-form">
         <input type="submit" value="Update selected items" name="update-btn" disabled>
     </form>
@@ -276,23 +276,14 @@
             "body": JSON.stringify({ "values": values })
         }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
-            if (d.status === 500){
-                let response = await d.json();
-                let errorCode = response["error"];
-                
-                if(errorCode == 2003){
-                    document.querySelector("#errmsg").innerHTML = "Database error. Please try again later.";
-                }
-                else if(errorCode == 1062){
-                    document.querySelector("#errmsg").innerHTML = response["msg"];
-                }
-                else{
-                    document.querySelector("#errmsg").innerHTML = "Internal server error. Please try again later.";
-                }
-            };
-        })
-        .catch(() => {
-            document.querySelector("#errmsg").innerHTML = "Server unavailable. Please try again later.";
+            if (d.status === 500) {
+                let res = await d.json();
+
+                document.querySelector(".form-bottom .form-msg").innerHTML = `<b>ERROR:</b> ${res['error']}`;
+                document.querySelector(".form-bottom .form-msg").classList.add("error");
+
+                if ('item' in res) Array.prototype.filter.call(document.querySelectorAll(".selection-table .table-body .table-row:not(#add-row)"), x => x.firstChild.firstChild.value === res['item'])[0].classList.add("error");
+            }
         });
     })
 </script>
