--- a/src/templates/inventory/request.html
+++ b/src/templates/inventory/request.html
@@ -102,8 +102,8 @@
     </div>
 </div>
 
-<div id="request-bottom">
-    <span id="errmsg"></span>
+<div class="form-bottom">
+    <span class="form-msg"></span>
     <form id="submit-form">
         <input type="submit" value="Request selected items" name="request-btn" disabled>
     </form>
@@ -143,7 +143,7 @@
         let amt = document.createElement("input");
         amt.type = "number";
         amt.min = 1;
-        amt.max = clone.children[5].innerText;
+        amt.max = +clone.children[5].innerText.replace(",", "");
         let amtWrap = document.createElement("div");
         amtWrap.classList.add("right");
         amtWrap.appendChild(amt);
@@ -207,20 +207,14 @@
             })
         }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
-            if (d.status === 500){
-                let response = await d.json();
-                let errorCode = response["error"];
-                
-                if(errorCode == 2003){
-                    document.querySelector("#errmsg").innerHTML = "Database error. Please try again later.";
-                }
-                else{
-                    document.querySelector("#errmsg").innerHTML = "Internal server error. Please try again later.";
-                }
+            if (d.status === 500) {
+                let res = await d.json();
+
+                document.querySelector(".form-bottom .form-msg").innerHTML = `<b>ERROR:</b> ${res['error']}`;
+                document.querySelector(".form-bottom .form-msg").classList.add("error");
+
+                if ('item' in res) Array.prototype.filter.call(document.querySelectorAll(".selection-table .table-body .table-row:not(#add-row)"), x => x.firstChild.firstChild.value === res['item'])[0].classList.add("error");
             }
-        })
-        .catch(() => {
-            document.querySelector("#errmsg").innerHTML = "Server unavailable. Please try again later.";
         });
     });
     
