Error handling adjustments
- Adjusted error handling for pages under `requests/`
- Moved exceptions to `exceptions.py`q

--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -97,6 +97,10 @@
     </div>
 </div>
 
+<div class="form-bottom">
+    <span class="form-msg"></span>
+</div>
+
 <script>
     let currentSort = [0, true];
     let privileges = +"{{ session['user']['RoleID'] }}";
